--- a/Gori/Mypage.storyboard
+++ b/Gori/Mypage.storyboard
@@ -105,6 +105,14 @@
                                     <segue destination="MaT-Zz-eOX" kind="unwind" unwindAction="unwindSegue:" id="hGc-GS-Nxz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ax-b0-eb7">
+                                <rect key="frame" x="301" y="20" width="58" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="로그아웃"/>
+                                <connections>
+                                    <action selector="signoutAction:" destination="2DW-D0-AZx" eventType="touchUpInside" id="ajY-0b-UMq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
